Update voltageLevel creation endpoint (#223)
* Update voltageLevel creation endpoint

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>